--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MA – Inteligência Jurídica</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
@@ -14,23 +14,24 @@
   </script>
 </head>
 <body class="bg-gradient-to-b from-[#0C2A52] to-[#F8F5F0] text-[#0C2A52] font-sans">
+
   <!-- Header -->
-  <header class="fixed w-full top-0 z-50 bg-white/90 backdrop-blur-md shadow px-4 md:px-10 py-4 flex justify-between items-center">
+  <header class="fixed top-0 w-full z-50 bg-white/90 backdrop-blur-md shadow px-6 md:px-10 py-4 flex justify-between items-center">
     <a href="/index.html">
-      <img src="/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-10">
+      <img src="/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-10 w-auto max-w-[160px]" />
     </a>
-    <nav class="hidden md:flex items-center space-x-6 text-sm font-semibold">
+    <nav class="hidden md:flex items-center gap-6 text-sm font-semibold">
       <a href="#servicos" class="hover:text-[#C5A268]">Serviços</a>
       <a href="#metodologia" class="hover:text-[#C5A268]">Metodologia</a>
       <a href="#missao" class="hover:text-[#C5A268]">Missão</a>
       <a href="#contato" class="hover:text-[#C5A268]">Contato</a>
-      <a href="/blog.html" class="hover:text-[#C5A268]">Blog</a>
+      <a href="/blog.html" class="hover:text-[#C5A268] font-semibold">Blog</a>
       <button onclick="setLang('en')" class="hover:text-[#C5A268]">EN</button>
     </nav>
   </header>
 
   <!-- Hero -->
-  <section class="pt-32 pb-20 text-center px-4">
+  <section class="pt-32 pb-20 text-center px-6">
     <h1 class="text-4xl md:text-5xl font-bold mb-6 text-white">Inteligência Jurídica com Propósito</h1>
     <p class="text-lg md:text-xl text-white max-w-2xl mx-auto">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
   </section>
@@ -55,7 +56,7 @@
   </section>
 
   <!-- Metodologia -->
-  <section id="metodologia" class="py-16 px-6 text-center">
+  <section id="metodologia" class="py-16 px-6 text-center bg-white text-[#0C2A52]">
     <h2 class="text-3xl font-bold mb-6">Nossa Metodologia</h2>
     <p class="max-w-3xl mx-auto text-lg">Aplicamos a lógica da Base Viva. Especialização, Autoridade, Oportunidade, Dignidade e Ambiência. Cada entrega é guiada por propósito, estratégia e conexão real com os desafios das famílias empresárias.</p>
   </section>
@@ -94,5 +95,6 @@
       </div>
     </div>
   </footer>
+
 </body>
 </html>
