--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
   </script>
 </head>
-<body class="bg-gradient-to-b from-[#0C2A52] to-[#F8F5F0] text-[#0C2A52] font-sans">
+<body class="bg-[#0C2A52] text-[#0C2A52] font-sans">
   <!-- Header -->
   <header class="fixed w-full top-0 z-50 bg-gradient-to-b from-[#0C2A52] to-[#F8F5F0] shadow px-4 md:px-10 py-4 flex justify-between items-center">
     <a href="/index.html">
