--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     }
   </script>
 </head>
-<body class="bg-[#0C2A52] text-[#0C2A52] font-sans">
+<body class="bg-gradient-to-b from-[#0C2A52] to-[#F8F5F0] text-[#0C2A52] font-sans">
   <!-- Header -->
-  <header class="fixed w-full top-0 z-50 bg-gradient-to-b from-[#0C2A52] to-[#F8F5F0] shadow px-4 md:px-10 py-4 flex justify-between items-center">
+  <header class="fixed w-full top-0 z-50 bg-[#0C2A52] shadow px-4 md:px-10 py-4 flex justify-between items-center">
     <a href="/index.html">
       <img src="/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-10">
     </a>
@@ -33,7 +33,7 @@
   </header>
 
   <!-- Hero -->
-  <section class="pt-32 pb-20 text-center px-4 bg-gradient-to-b from-[#0C2A52] to-[#F8F5F0] text-white">
+  <section class="pt-32 pb-20 text-center px-4 bg-[#0C2A52] text-white">
     <h1 class="text-4xl md:text-5xl font-bold mb-6">Inteligência Jurídica com Propósito</h1>
     <p class="text-lg md:text-xl max-w-2xl mx-auto">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
   </section>
@@ -85,7 +85,7 @@
   </a>
 
   <!-- Rodapé -->
-  <footer class="bg-gradient-to-b from-[#0C2A52] to-[#F8F5F0] text-white text-sm py-8 px-6">
+  <footer class="bg-[#0C2A52] text-white text-sm py-8 px-6">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between gap-4">
       <div>
         <p>© 2025 MA – Inteligência Jurídica</p>
