--- a/index.html
+++ b/index.html
@@ -1,101 +1,205 @@
+[media pointer="file-service://file-5HYViZXBhY2mhxJoMY5vg6"]
+ficou sem ação para as sessões!
+Analise as melhorias que já existiam
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MA – Inteligência Jurídica</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title data-i18n="title">MA – Inteligência Jurídica | Contratos, Sucessão e Governança Familiar</title>
+  <meta name="description" content="Advocacia empresarial e familiar: contratos personalizados, planejamento sucessório e governança intergeracional para empresas e famílias empresárias." />
+
+  <!-- SEO / OG / Twitter -->
+  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="pt-BR" />
+  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="en" />
+  <link rel="canonical" href="https://malcantara.adv.br/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="MA – Inteligência Jurídica" />
+  <meta property="og:description" content="Estratégias jurídicas premium para empresas e famílias empresárias." />
+  <meta property="og:url" content="https://malcantara.adv.br/" />
+  <meta property="og:image" content="https://malcantara.adv.br/public/assets/logo.svg" />
+  <meta property="og:locale" content="pt_BR" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="MA – Inteligência Jurídica" />
+  <meta name="twitter:description" content="Contratos, sucessão e governança familiar com inteligência." />
+  <meta name="twitter:image" content="https://malcantara.adv.br/public/assets/logo.svg" />
+
+  <!-- Performance -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" />
+  <link rel="preload" href="public/assets/logo.svg" as="image" />
+  <link rel="icon" href="public/assets/logo.svg" type="image/svg+xml" />
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- AOS -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
   <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+
+  <!-- GA4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FNXCNKTCY5"></script>
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      AOS.init({ duration: 700, once: true });
-    });
-    function setLang(lang) {
-      alert("Tradução para '" + lang + "' ainda não implementada.");
-    }
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config','G-FNXCNKTCY5');
+  </script>
+
+  <!-- JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"LegalService",
+    "name":"MA – Inteligência Jurídica",
+    "url":"https://malcantara.adv.br/",
+    "logo":"https://malcantara.adv.br/public/assets/logo.svg",
+    "image":"https://malcantara.adv.br/public/assets/logo.svg",
+    "description":"Advocacia empresarial e familiar: contratos, planejamento sucessório e governança familiar.",
+    "telephone":"+55-38-98416-4737",
+    "email":"contato@malcantara.adv.br",
+    "address":{
+      "@type":"PostalAddress",
+      "streetAddress":"Rua Áustria, 61 – Ibituruna",
+      "addressLocality":"Montes Claros",
+      "addressRegion":"MG",
+      "postalCode":"39402-145",
+      "addressCountry":"BR"
+    },
+    "founder":{"@type":"Person","name":"Maurício Alcântara"}
+  }
   </script>
 </head>
-<body class="bg-gradient-to-b from-[#0C2A52] to-[#F8F5F0] text-[#0C2A52] font-sans">
-  <!-- Header -->
-  <header class="fixed w-full top-0 z-50 bg-[#0C2A52] shadow px-4 md:px-10 py-4 flex justify-between items-center">
-    <a href="/index.html">
-      <img src="/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-10">
-    </a>
-    <nav class="hidden md:flex items-center space-x-6 text-sm font-semibold text-white">
-      <a href="#servicos" class="hover:text-[#C5A268]">Serviços</a>
-      <a href="#metodologia" class="hover:text-[#C5A268]">Metodologia</a>
-      <a href="#missao" class="hover:text-[#C5A268]">Missão</a>
-      <a href="#contato" class="hover:text-[#C5A268]">Contato</a>
-      <a href="/blog.html" class="hover:text-[#C5A268]">Blog</a>
-      <button onclick="setLang('en')" class="hover:text-[#C5A268]">EN</button>
-    </nav>
+
+<body class="bg-[#F8F5F0] text-[#0F172A] font-sans">
+
+  <!-- HEADER -->
+  <header class="bg-white shadow-md fixed w-full z-50">
+    <div class="max-w-7xl mx-auto flex items-center justify-between py-3 px-6">
+      <a href="/"><img src="public/assets/logo.svg" alt="MA – Inteligência Jurídica" class="h-[120px] w-auto" /></a>
+      <nav class="flex items-center space-x-6 font-semibold text-[#0C2A52]">
+        <a href="#servicos"    class="hover:text-[#C5A268]" data-i18n="menu_services">Serviços</a>
+        <a href="#metodologia" class="hover:text-[#C5A268]" data-i18n="menu_method">Metodologia</a>
+        <a href="#sobre"       class="hover:text-[#C5A268]" data-i18n="menu_about">Quem Somos</a>
+        <a href="#contato"     class="hover:text-[#C5A268]" data-i18n="menu_contact">Contato</a>
+        <a href="blog.html"    target="_blank" rel="noopener" class="hover:text-[#C5A268]" data-i18n="menu_blog">Blog</a>
+        <div class="border-l pl-4 ml-2 flex items-center">
+          <button onclick="setLang('pt')" class="px-1">PT</button> |
+          <button onclick="setLang('en')" class="px-1">EN</button>
+        </div>
+      </nav>
+    </div>
   </header>
 
-  <!-- Hero -->
-  <section class="pt-32 pb-16 text-center px-4 bg-[#0C2A52] text-white">
-    <h1 class="text-4xl md:text-5xl font-bold mb-6">Inteligência Jurídica com Propósito</h1>
-    <p class="text-lg md:text-xl max-w-2xl mx-auto">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
+  <!-- Spacer for fixed header -->
+  <div class="h-16"></div>
+
+  <!-- HERO -->
+  <section class="pt-32 pb-16 bg-gradient-to-r from-[#0C2A52] to-[#0A3D91] text-white text-center">
+    <div class="max-w-4xl mx-auto px-4 flex flex-col items-center gap-6" data-aos="fade-down">
+      <h1 class="text-4xl font-bold" data-i18n="hero_title">Inteligência Jurídica com Propósito</h1>
+      <p class="text-xl max-w-2xl" data-i18n="hero_sub">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
+      <a href="https://wa.me/5538984164737" class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90" data-i18n="cta_diag">Agendar Diagnóstico</a>
+    </div>
   </section>
 
-  <!-- Serviços -->
-  <section id="servicos" class="py-16 bg-[#F8F5F0] text-[#0C2A52] px-6">
-    <h2 class="text-3xl font-bold text-center mb-12">Nossos Serviços</h2>
-    <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-      <div class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition">
-        <h3 class="text-lg font-bold mb-2">Contratos Empresariais</h3>
-        <p>Proteção jurídica, gestão de riscos e estratégia em instrumentos contratuais personalizados.</p>
-      </div>
-      <div class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition">
-        <h3 class="text-lg font-bold mb-2">Planejamento Sucessório</h3>
-        <p>Organização patrimonial e sucessão harmônica com foco na perenidade familiar.</p>
-      </div>
-      <div class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition">
-        <h3 class="text-lg font-bold mb-2">Governança Familiar</h3>
-        <p>Estruturação de acordos, protocolos e governança intergeracional.</p>
+  <!-- SERVIÇOS -->
+  <section id="servicos" class="py-20 px-6 bg-white scroll-mt-32">
+    <div class="max-w-6xl mx-auto">
+      <h2 class="text-3xl font-bold mb-10 text-center">Por que escolher a MA?</h2>
+      <p class="text-center mb-12 max-w-3xl mx-auto">
+        Escolher a MA é optar por clareza, firmeza e confiança.
+        Somos uma estrutura de inteligência jurídica formada para empresários, juristas e famílias empresárias que não aceitam soluções superficiais.
+        Trabalhamos para construir perenidade patrimonial, harmonia societária e segurança contratual — com técnica, verdade e visão.
+        Aqui, os valores não são slogans: são cláusulas vivas que sustentam nossos atos.
+      </p>
+      <div class="grid md:grid-cols-3 gap-10">
+        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md">
+          <h3 class="text-xl font-semibold mb-2" data-i18n="service_contracts_h">Contratos Empresariais</h3>
+          <p data-i18n="service_contracts_p">Proteção jurídica, gestão de riscos e estratégia em instrumentos contratuais personalizados.</p>
+        </div>
+        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md">
+          <h3 class="text-xl font-semibold mb-2" data-i18n="service_succession_h">Planejamento Sucessório</h3>
+          <p data-i18n="service_succession_p">Organização patrimonial e sucessão harmônica com foco na perenidade familiar.</p>
+        </div>
+        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md">
+          <h3 class="text-xl font-semibold mb-2" data-i18n="service_governance_h">Governança Familiar</h3>
+          <p data-i18n="service_governance_p">Estruturação de acordos, protocolos e governança intergeracional.</p>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- Metodologia -->
-  <section id="metodologia" class="py-16 px-6 text-center bg-white">
-    <h2 class="text-3xl font-bold mb-6">Nossa Metodologia</h2>
-    <p class="max-w-3xl mx-auto text-lg text-[#0C2A52]">Aplicamos a lógica da Base Viva. Especialização, Autoridade, Oportunidade, Dignidade e Ambiência. Cada entrega é guiada por propósito, estratégia e conexão real com os desafios das famílias empresárias.</p>
+  <!-- METODOLOGIA -->
+  <section id="metodologia" class="py-20 px-6 bg-gradient-to-r from-[#0C2A52] to-[#0A3D91] text-white scroll-mt-32">
+    <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
+      <h2 class="text-3xl font-bold mb-6">Muito além de um serviço jurídico</h2>
+      <p class="text-lg">
+        Direito com propósito, não rotina.<br/>
+        Na MA – Inteligência Jurídica, não vendemos tempo ou pareceres padronizados. Oferecemos presença estratégica, linguagem precisa e visão de longo prazo. Cada contrato é uma semente de futuro. Cada família empresária, um legado em construção. Atendemos com a firmeza de quem conhece a Lei e a leveza de quem compreende o humano.<br/><br/>
+        Uma advocacia que protege, estrutura e conduz. Com alma.
+      </p>
+    </div>
   </section>
 
-  <!-- Missão e Contato -->
-  <section id="missao" class="py-16 bg-[#F8F5F0] px-6">
-    <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10">
-      <div>
-        <h2 class="text-3xl font-bold mb-4">Nossa Missão</h2>
-        <p class="text-lg">A MA existe para transformar conhecimento jurídico em impacto real, por meio de estratégia, sensibilidade e técnica. Atuamos com propósito, ao lado de empresas e famílias empresárias, promovendo perenidade, ética e inteligência jurídica aplicada.</p>
-      </div>
-      <form id="contato" class="space-y-4">
-        <input type="text" placeholder="Seu nome" class="w-full p-3 border rounded">
-        <input type="email" placeholder="Seu e-mail" class="w-full p-3 border rounded">
-        <textarea placeholder="Sua mensagem" class="w-full p-3 border rounded h-32"></textarea>
-        <button type="submit" class="bg-[#C5A268] text-white px-6 py-3 rounded hover:bg-[#a78550]">Enviar</button>
+  <!-- SOBRE -->
+  <section id="sobre" class="py-20 px-6 bg-white text-[#0F172A] scroll-mt-32">
+    <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
+      <h2 class="text-3xl font-bold mb-6" data-i18n="about_title">Quem Somos</h2>
+      <p class="text-lg" data-i18n="about_text">
+        A MA nasceu para romper com a advocacia genérica. Criamos soluções sob medida, orientadas por propósito, técnica e inteligência artificial aplicada.
+      </p>
+    </div>
+  </section>
+
+  <!-- CONTATO -->
+  <section id="contato" class="py-20 px-6 bg-[#F8F5F0] scroll-mt-32">
+    <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
+      <h2 class="text-3xl font-bold mb-6" data-i18n="contact_title">Fale Conosco</h2>
+      <form action="https://formspree.io/f/mayvgkrl" method="POST" class="space-y-6">
+        <input name="nome" type="text" required placeholder="Seu nome" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_name" />
+        <input name="email" type="email" required placeholder="Seu e-mail" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_email" />
+        <textarea name="mensagem" required placeholder="Sua mensagem" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_msg"></textarea>
+        <button type="submit" class="bg-[#0C2A52] text-white px-6 py-3 rounded-xl hover:bg-[#C5A268]" data-i18n="contact_send">Enviar</button>
       </form>
     </div>
   </section>
 
-  <!-- Botão WhatsApp -->
-  <a href="https://wa.me/5538984164737" target="_blank" class="fixed bottom-6 right-6 z-50">
-    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" class="w-12 h-12">
-  </a>
-
-  <!-- Rodapé -->
-  <footer class="bg-[#0C2A52] text-white text-sm py-8 px-6">
-    <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between gap-4">
+  <!-- RODAPÉ -->
+  <footer class="bg-[#0C2A52] text-white text-sm py-6">
+    <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between gap-4">
       <div>
         <p>© 2025 MA – Inteligência Jurídica</p>
-        <p>Rua Áustria, 61 – Ibituruna – Montes Claros/MG</p>
-        <p><a href="mailto:contato@malcantara.adv.br" class="underline">contato@malcantara.adv.br</a> • +55 38 98416-4737</p>
+        <p>Endereço físico: Rua Áustria, 61 – Ibituruna – Montes Claros/MG</p>
+        <p>Área de atuação: Advocacia Empresarial</p>
+        <p>Escritório digital (sem atendimento físico fixo)</p>
       </div>
       <div class="text-right">
-        <a href="#" class="underline">Voltar ao Início</a>
+        <p><a href="mailto:contato@malcantara.adv.br" class="underline">contato@malcantara.adv.br</a></p>
+        <p>+55 38 98416-4737</p>
       </div>
     </div>
   </footer>
+
+  <!-- i18n + AOS -->
+  <script>
+    function setLang(l){ localStorage.setItem('lang',l); location.reload(); }
+    window.addEventListener('DOMContentLoaded', async () => {
+      const lang = localStorage.getItem('lang') || 'pt';
+      document.documentElement.lang = lang;
+      try {
+        const tr = await fetch('./i18n/'+lang+'.json').then(r => r.json());
+        document.querySelectorAll('[data-i18n]').forEach(el => {
+          const k = el.dataset.i18n;
+          if (tr[k]) el.textContent = tr[k];
+        });
+        document.querySelectorAll('[data-i18n-placeholder]').forEach(el => {
+          const k = el.dataset.i18nPlaceholder;
+          if (tr[k]) el.placeholder = tr[k];
+        });
+      } catch(e) { console.warn('i18n error', e); }
+      AOS.init({ duration:700, once:true });
+    });
+  </script>
 </body>
 </html>
+Adeque para melhorar a estética sem perder as funcionalidades
