--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
 
   <!-- Performance -->
   <link rel="preconnect" href="https://www.googletagmanager.com">
-  <link rel="preload" href="/assets/Mauricio-Alcantara-Site.svg" as="image">
-  <link rel="icon" href="/assets/Mauricio-Alcantara-Site.svg" type="image/svg+xml">
+  <link rel="preload" href="/public/assets/logo.svg" as="image">
+  <link rel="icon" href="/public/assets/logo.svg" type="image/svg+xml">
 
   <!-- Tailwind CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-
-  <!-- AOS -->
+  <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
@@ -75,10 +73,9 @@
   </script>
 </head>
 <body class="bg-[#0C2A52] text-white font-sans">
-  <!-- Header -->
   <header class="fixed w-full top-0 z-50 bg-[#0C2A52] shadow px-4 md:px-10 py-4 flex justify-between items-center">
     <a href="/index.html">
-      <img src="/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-10">
+      <img src="/public/assets/logo.svg" alt="MA – Inteligência Jurídica" class="h-10">
     </a>
     <nav class="hidden md:flex items-center space-x-6 text-sm font-semibold text-white">
       <a href="#servicos" class="hover:text-[#C5A268]">Serviços</a>
@@ -90,14 +87,12 @@
     </nav>
   </header>
 
-  <!-- Hero -->
   <section class="pt-32 pb-20 text-center px-4 bg-gradient-to-r from-[#0C2A52] to-[#0A3D91]">
     <h1 class="text-4xl md:text-5xl font-bold mb-6">Inteligência Jurídica com Propósito</h1>
     <p class="text-lg md:text-xl max-w-2xl mx-auto">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
     <a href="https://wa.me/5538984164737" class="mt-6 inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90">Agendar Diagnóstico</a>
   </section>
 
-  <!-- Serviços -->
   <section id="servicos" class="py-20 bg-[#F8F5F0] text-[#0C2A52] px-6 scroll-mt-32">
     <h2 class="text-3xl font-bold text-center mb-12">Nossos Serviços</h2>
     <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
@@ -116,13 +111,11 @@
     </div>
   </section>
 
-  <!-- Metodologia -->
   <section id="metodologia" class="py-20 px-6 text-center bg-white text-[#0C2A52] scroll-mt-32">
     <h2 class="text-3xl font-bold mb-6">Nossa Metodologia</h2>
     <p class="max-w-3xl mx-auto text-lg">Aplicamos a lógica da Base Viva. Especialização, Autoridade, Oportunidade, Dignidade e Ambiência. Cada entrega é guiada por propósito, estratégia e conexão real com os desafios das famílias empresárias.</p>
   </section>
 
-  <!-- Missão e Contato -->
   <section id="missao" class="py-20 bg-[#F8F5F0] px-6 text-[#0C2A52] scroll-mt-32">
     <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10">
       <div>
@@ -138,12 +131,10 @@
     </div>
   </section>
 
-  <!-- WhatsApp -->
   <a href="https://wa.me/5538984164737" target="_blank" class="fixed bottom-6 right-6 z-50">
     <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" class="w-12 h-12">
   </a>
 
-  <!-- Rodapé -->
   <footer class="bg-[#0C2A52] text-white text-sm py-8 px-6">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between gap-4">
       <div>
