nova logo com fundo bege e proporção ideal

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body class="bg-[#0C2A52] text-white font-sans">
   <header class="fixed w-full top-0 z-50 bg-[#0C2A52] shadow px-4 md:px-10 py-4 flex justify-between items-center">
     <a href="/index.html">
-      <img src="/public/assets/logo.svg" alt="MA – Inteligência Jurídica" class="h-10">
+      <img src="/public/assets/logo_ma_premium.png" alt="MA – Inteligência Jurídica" class="h-16 md:h-20 max-w-xs">
     </a>
     <nav class="hidden md:flex items-center space-x-6 text-sm font-semibold text-white">
       <a href="#servicos" class="hover:text-[#C5A268]">Serviços</a>
