--- a/index.html
+++ b/index.html
@@ -220,4 +220,9 @@
         if (tr && tr[k]) el.placeholder = tr[k];
       });
       if (typeof AOS !== 'undefined') {
-        AOS.init({ duration: 700, once
+        AOS.init({ duration: 700, once: true });
+      }
+    });
+  </script>
+</body>
+</html>
