--- a/index.html
+++ b/index.html
@@ -106,10 +106,17 @@
     <div class="max-w-6xl mx-auto">
       <h2 class="text-3xl font-bold mb-10 text-center" data-i18n="service_title">Por que escolher a MA?</h2>
       <p class="text-center mb-12 max-w-3xl mx-auto" data-i18n="service_intro">
-        Escolher a MA é optar por clareza, firmeza e confiança.
-        Somos uma estrutura de inteligência jurídica formada para empresários, juristas e famílias empresárias que não aceitam soluções superficiais.
-        Trabalhamos para construir perenidade patrimonial, harmonia societária e segurança contratual — com técnica, verdade e visão.
-        Aqui, os valores não são slogans: são cláusulas vivas que sustentam nossos atos.
+        Por que escolher a MA – Inteligência Jurídica?
+Optar pela MA é investir em clareza, firmeza e confiança. Nosso atendimento é 100 % estratégico:
+Cobertura Completa
+Contratos sob medida • Planejamento sucessório • Governança familiar • Compliance no agronegócio
+Metodologia Base Viva
+Especialização • Autoridade • Oportunidade • Personalidade • Ambiência
+Legado Sustentável
+Cada cláusula é um pilar de perenidade patrimonial e harmonia familiar
+Inovação Consciente
+IA para eficiência + sensibilidade humana em cada entrega
+MA não vende documentos. Construímos legados vivos com propósito e inteligência — é a paixão do seu propósito em ação.
       </p>
       <div class="grid md:grid-cols-3 gap-10">
         <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up" data-aos-delay="100">
