--- a/index.html
+++ b/index.html
@@ -104,18 +104,23 @@
   <!-- SERVIÇOS -->
   <section id="servicos" class="py-20 px-6 bg-white scroll-mt-32">
     <div class="max-w-6xl mx-auto">
-      <h2 class="text-3xl font-bold mb-10 text-center" data-i18n="service_title">Por que escolher a MA?</h2>
+      <h2 class="text-3xl font-bold mb-10 text-center" data-i18n="service_title">Por que escolher a MA – Inteligência Jurídica?</h2>
       <p class="text-center mb-12 max-w-3xl mx-auto" data-i18n="service_intro">
-        Por que escolher a MA – Inteligência Jurídica?
+        
 Optar pela MA é investir em clareza, firmeza e confiança. Nosso atendimento é 100 % estratégico:
+
 Cobertura Completa
 Contratos sob medida • Planejamento sucessório • Governança familiar • Compliance no agronegócio
+
 Metodologia Base Viva
 Especialização • Autoridade • Oportunidade • Personalidade • Ambiência
+
 Legado Sustentável
 Cada cláusula é um pilar de perenidade patrimonial e harmonia familiar
+
 Inovação Consciente
 IA para eficiência + sensibilidade humana em cada entrega
+
 MA não vende documentos. Construímos legados vivos com propósito e inteligência — é a paixão do seu propósito em ação.
       </p>
       <div class="grid md:grid-cols-3 gap-10">
